# course-mpi

01-hello-mpi/: log.txt
02-simple-iterations/: CMakeLists.txt  main.cpp
03-seidel-method/: CMakeLists.txt  main.cpp
04-seidel-mpi/: CMakeLists.txt  main.c
05-seidel-matrix-generator/: CMakeLists.txt  main.cpp
